# Notation-Converter

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeCache.txt  CTestTestfile.cmake  Makefile  arithmetic_notation.h  cmake_install.cmake  notation_converter.h  notation_converter_util.h  run_tests  syntax_tree.h
src/: notation_converter.cpp  notation_converter_util.cpp  syntax_tree.cpp
tests/: notation_converter_test.cpp  notation_converter_util_test.cpp  syntax_tree_test.cpp
